@@ -1010,8 +1010,7 @@ module Sequel
 
     # An expression for how to handle an empty array lookup.
     def empty_array_value(op, cols)
-      c = Array(cols)
-      SQL::BooleanExpression.from_value_pairs(c.zip(c), :AND, op == :IN)
+      {1 => ((op == :IN) ? 0 : 1)}
     end
     
     # Format the timestamp based on the default_timestamp_format, with a couple
